--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,11 +9,11 @@
             android:icon="@drawable/ic_baseline_sticky_note_2_24"
             android:title="@string/menu_home" />
 
-
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_baseline_settings_24"
+            android:title="@string/action_settings" />
     </group>
 
-    <item
-        android:id="@+id/nav_slideshow"
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="@string/action_settings" />
+
 </menu>
