--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,15 +5,30 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+
     </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:colorBackground">#212645</item>
+
+        <item name="android:textColor">#fff</item>
+        <!--        <item name="android:textColorPrimary">#fff</item>-->
+        <item name="android:textColorSecondary">#ffC5C5C5</item>
+        <!---->
+        <!--        <item name="android:actionMenuTextColor">#fff</item>-->
+
+        <item name="android:itemBackground">#121527</item>
+
+        <!--    <item name="android:textColorSecondary">#C5C5C5</item>-->
+
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 
 </resources>
