--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,15 @@
         <item name="colorAccent">@color/colorAccent</item>
 
 
+        <!--        <item name="colorAccent">#B80404</item>-->
+        <!--        <item name="android:textColor">@android:color/black</item>-->
+        <!--        <item name="android:textColorAlertDialogListItem">@android:color/black</item>-->
+        <!--        <item name="android:windowBackground">#2962FF</item>-->
+        <item name="alertDialogTheme">@style/MyAlert</item>
+        <item name="android:alertDialogTheme">@style/MyAlert</item>
+
+        <!--        <item name="android:colorBackground">#2962FF</item>-->
+
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -15,20 +24,21 @@
         <item name="android:colorBackground">#212645</item>
 
         <item name="android:textColor">#fff</item>
-        <!--        <item name="android:textColorPrimary">#fff</item>-->
         <item name="android:textColorSecondary">#ffC5C5C5</item>
-        <!---->
-        <!--        <item name="android:actionMenuTextColor">#fff</item>-->
 
-        <item name="android:itemBackground">#121527</item>
-
-        <!--    <item name="android:textColorSecondary">#C5C5C5</item>-->
 
     </style>
+
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+
+    <style name="MyAlert" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+        <item name="android:background">#212645</item>
+        <item name="textColorAlertDialogListItem">#fff</item>
+        <!--        <item name="android:"-->
+    </style>
 
 </resources>
