--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,4 +1,5 @@
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory app:title="Account">
 
@@ -19,6 +20,20 @@
             app:defaultValue="false"
             app:key="auth"
             app:title="Enable Biometric Authentication" />
+    </PreferenceCategory>
+
+    <PreferenceCategory app:title="Voice Recognition">
+        <ListPreference
+            android:dialogTitle="Select a Voice Model"
+            app:defaultValue="google"
+            app:dialogTitle="Select a Voice Model"
+            app:entries="@array/model_names"
+            app:entryValues="@array/model_values"
+            app:key="model"
+            app:title="Voice Model"
+            app:useSimpleSummaryProvider="true">
+
+        </ListPreference>
     </PreferenceCategory>
 
 
