--- a/master.css
+++ b/master.css
@@ -47,7 +47,7 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
 
-    text-decoration: none !important;
+    text-decoration: none;
 }
 
 #menu {
